publish: fix(Tabs): Overflow scroll only when needed
generated from commit 3a6fb9a6bff8902db5b430d50af12d21bd40b4f0

--- a/react/main.css
+++ b/react/main.css
@@ -3948,6 +3948,24 @@ body {
     list-style-type: none;
   }
 }
+.u-media {
+  display: flex;
+  align-items: center;
+}
+.u-media-top {
+  align-items: flex-start;
+}
+.u-media-bottom {
+  align-items: flex-end;
+}
+.u-media-grow {
+  flex: 1 1 auto;
+  overflow: hidden;
+}
+.u-media-fixed {
+  line-height: 0;
+  flex: 0 0 auto;
+}
 .u-o-100--2MAae {
   opacity: 1;
 }
@@ -6233,14 +6251,14 @@ body {
     position: static;
   }
 }
+.u-top-m {
+  top: 1rem;
+}
 .u-top-xs {
   top: 0.5rem;
 }
 .u-top-s {
   top: 0.75rem;
-}
-.u-top-m {
-  top: 1rem;
 }
 .u-top-l {
   top: 1.5rem;
@@ -6254,14 +6272,14 @@ body {
 .u-top-0 {
   top: 0;
 }
+.u-bottom-m {
+  bottom: 1rem;
+}
 .u-bottom-xs {
   bottom: 0.5rem;
 }
 .u-bottom-s {
   bottom: 0.75rem;
-}
-.u-bottom-m {
-  bottom: 1rem;
 }
 .u-bottom-l {
   bottom: 1.5rem;
@@ -6275,14 +6293,14 @@ body {
 .u-bottom-0 {
   bottom: 0;
 }
+.u-left-m {
+  left: 1rem;
+}
 .u-left-xs {
   left: 0.5rem;
 }
 .u-left-s {
   left: 0.75rem;
-}
-.u-left-m {
-  left: 1rem;
 }
 .u-left-l {
   left: 1.5rem;
@@ -6296,14 +6314,14 @@ body {
 .u-left-0 {
   left: 0;
 }
+.u-right-m {
+  right: 1rem;
+}
 .u-right-xs {
   right: 0.5rem;
 }
 .u-right-s {
   right: 0.75rem;
-}
-.u-right-m {
-  right: 1rem;
 }
 .u-right-l {
   right: 1.5rem;
@@ -6317,14 +6335,14 @@ body {
 .u-right-0 {
   right: 0;
 }
+.u-stack-m > * + * {
+  margin-top: 1rem;
+}
 .u-stack-xs > * + * {
   margin-top: 0.5rem;
 }
 .u-stack-s > * + * {
   margin-top: 0.75rem;
-}
-.u-stack-m > * + * {
-  margin-top: 1rem;
 }
 .u-stack-l > * + * {
   margin-top: 1.5rem;
@@ -6334,6 +6352,24 @@ body {
 }
 .u-stack-xxl > * + * {
   margin-top: 3rem;
+}
+.u-row-m > * + * {
+  margin-left: 1rem;
+}
+.u-row-xs > * + * {
+  margin-left: 0.5rem;
+}
+.u-row-s > * + * {
+  margin-left: 0.75rem;
+}
+.u-row-l > * + * {
+  margin-left: 1.5rem;
+}
+.u-row-xl > * + * {
+  margin-left: 2rem;
+}
+.u-row-xxl > * + * {
+  margin-left: 3rem;
 }
 .u-title-h1,
 .u-title-h2,
@@ -10517,28 +10553,23 @@ body {
   background-color: var(--dodgerBlue);
 }
 .c-btn--ghost--1HC3L {
-  background-color: var(--hawkesBlue);
-  color: var(--primaryColor);
-  border-color: var(--primaryColor);
+  background-color: var(--zircon);
+  color: var(--dodgerBlue);
+  border-color: var(--frenchPass);
   border-style: dashed;
 }
 .c-btn--ghost--1HC3L:visited {
-  color: var(--primaryColor);
+  color: var(--dodgerBlue);
 }
 .c-btn--ghost--1HC3L:active,
 .c-btn--ghost--1HC3L:hover,
 .c-btn--ghost--1HC3L:focus {
-  border-color: var(--hawkesBlue);
-  background-color: var(--hawkesBlue);
+  border-color: var(--frenchPass);
+  background-color: var(--frenchPass);
 }
 .c-btn--ghost--1HC3L[disabled]:hover,
 .c-btn--ghost--1HC3L[aria-disabled=true]:hover {
-  background-color: var(--hawkesBlue);
-}
-.c-btn--ghost--1HC3L:active,
-.c-btn--ghost--1HC3L:hover,
-.c-btn--ghost--1HC3L:focus {
-  border-color: var(--primaryColor);
+  background-color: var(--zircon);
 }
 .c-btn--highlight--2jRfu {
   background-color: var(--emerald);
@@ -11234,6 +11265,62 @@ body {
   .c-card--inset--2pofc {
     margin: 0.5rem;
   }
+}
+
+.media--cSJMp {
+  display: flex;
+  align-items: center;
+}
+.media--top--K9w0I {
+  align-items: flex-start;
+}
+.media--bottom--21YWJ {
+  align-items: flex-end;
+}
+.bd--1Uv-F {
+  flex: 1 1 auto;
+  overflow: hidden;
+}
+.img--3SHpG {
+  line-height: 0;
+  flex: 0 0 auto;
+}
+
+.c-circle--1DuMR {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: var(--dodgerBlue);
+  color: var(--white);
+  font-size: 1.125rem;
+}
+.c-circle--xsmall--aEyBX {
+  width: 1rem;
+  height: 1rem;
+  font-size: 0.438rem;
+}
+.c-circle--small--3uPhB {
+  width: 2rem;
+  height: 2rem;
+  font-size: 0.875rem;
+}
+.c-circle--large--3jQ-U {
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.313rem;
+}
+.c-circle--xlarge--11jP5 {
+  width: 4rem;
+  height: 4rem;
+  font-size: 1.688rem;
+}
+.c-circle-text--1jFgD {
+  font-weight: bold;
+  line-height: 1;
 }
 
 :root {
@@ -13828,14 +13915,14 @@ body {
     margin-right: 2.5rem !important;
   }
 }
+.Stack--m--1tSpV > * + * {
+  margin-top: 1rem;
+}
 .Stack--xs--2R5lW > * + * {
   margin-top: 0.5rem;
 }
 .Stack--s--22WMg > * + * {
   margin-top: 0.75rem;
-}
-.Stack--m--1tSpV > * + * {
-  margin-top: 1rem;
 }
 .Stack--l--3oxCJ > * + * {
   margin-top: 1.5rem;
@@ -21944,43 +22031,6 @@ body {
   text-align: center;
 }
 
-.c-circle--1DuMR {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  overflow: hidden;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: var(--dodgerBlue);
-  color: var(--white);
-  font-size: 1.125rem;
-}
-.c-circle--xsmall--aEyBX {
-  width: 1rem;
-  height: 1rem;
-  font-size: 0.438rem;
-}
-.c-circle--small--3uPhB {
-  width: 2rem;
-  height: 2rem;
-  font-size: 0.875rem;
-}
-.c-circle--large--3jQ-U {
-  width: 3rem;
-  height: 3rem;
-  font-size: 1.313rem;
-}
-.c-circle--xlarge--11jP5 {
-  width: 4rem;
-  height: 4rem;
-  font-size: 1.688rem;
-}
-.c-circle-text--1jFgD {
-  font-weight: bold;
-  line-height: 1;
-}
-
 .PageFooter--2IFCx {
   flex-grow: 0;
 }
@@ -21990,25 +22040,6 @@ body {
 .PageLayout--1ptQY {
   display: flex;
   flex-direction: column;
-}
-
-.media--cSJMp {
-  display: flex;
-  align-items: center;
-}
-.media--top--K9w0I {
-  align-items: flex-start;
-}
-.media--bottom--21YWJ {
-  align-items: flex-end;
-}
-.bd--1Uv-F {
-  flex: 1 1 auto;
-  overflow: hidden;
-}
-.img--3SHpG {
-  line-height: 0;
-  flex: 0 0 auto;
 }
 
 .c-overlay--31iWd {
@@ -25627,7 +25658,8 @@ iframe {
 .coz-tabs--24QL5 .coz-tab-list--3qac8 {
   border-bottom: 0.063rem solid var(--silver);
   background: var(--tabsBackgroundColor);
-  overflow-x: scroll;
+  overflow-x: auto;
+  display: flex;
 }
 .coz-tabs--24QL5 .coz-tab-list--inverted--3VjXc {
   --tabsActiveTextColor: var(--primaryContrastTextColor);
@@ -25636,7 +25668,7 @@ iframe {
   --tabsBackgroundColor: var(--primaryColor);
 }
 .coz-tabs--24QL5 .coz-tab--2mOye {
-  display: inline-block;
+  flex: 0 0;
   padding: 0.625rem 1rem;
   text-transform: uppercase;
   font-size: 0.75rem;
